force-app/main/default/objects/KimbleAgent__LicenseType__c/KimbleAgent__LicenseType__c.object-meta.xml
<CustomObject>
    <label>Kimble Sense License Type</label>
    <nameField>
        <label>License Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License Types</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>