force-app/main/default/objects/KimbleAgent__LicenseType__c/fields/KimbleAgent__Allowed__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__Allowed__c</fullName>
    <label>Allowed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>