force-app/main/default/objects/KimbleAgent__LicenseType__c/fields/KimbleAgent__AnalysisPriority__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__AnalysisPriority__c</fullName>
    <label>Analysis Priority</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>