force-app/main/default/objects/KimbleAgent__LicenseType__c/fields/KimbleAgent__Available__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__Available__c</fullName>
    <formula>KimbleAgent__Allowed__c -  KimbleAgent__Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>