force-app/main/default/objects/KimbleAgent__LicenseType__c/fields/KimbleAgent__ConfigurationJson__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__ConfigurationJson__c</fullName>
    <label>Configuration Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>