force-app/main/default/objects/KimbleAgent__LicenseType__c/fields/KimbleAgent__CriterionGroupConditionLogic__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__CriterionGroupConditionLogic__c</fullName>
    <label>Criterion Group Condition Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>