force-app/main/default/objects/KimbleAgent__LicenseType__c/fields/KimbleAgent__IsAddOn__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__IsAddOn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Add-On</label>
    <type>Checkbox</type>
</CustomField>