force-app/main/default/objects/KimbleAgent__LicenseType__c/fields/KimbleAgent__PackageName__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__PackageName__c</fullName>
    <label>Package Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>