force-app/main/default/objects/KimbleAgent__LicenseType__c/fields/KimbleAgent__RequiresPackageLicense__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__RequiresPackageLicense__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Requires Package License</label>
    <type>Checkbox</type>
</CustomField>