force-app/main/default/objects/KimbleAgent__LicenseType__c/fields/KimbleAgent__RequiresUserLicense__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__RequiresUserLicense__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Requires User License</label>
    <type>Checkbox</type>
</CustomField>