force-app/main/default/objects/KimbleAgent__LicenseType__c/fields/KimbleAgent__Used__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__Used__c</fullName>
    <label>Used</label>
    <summaryForeignKey>KimbleAgent__LicenseSubscription__c.KimbleAgent__LicenseType__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>