force-app/main/default/objects/KimbleAgent__LicenseType__c/listViews/KimbleAgent__All.listView-meta.xml
<ListView>
    <fullName>KimbleAgent__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleAgent__PackageName__c</columns>
    <columns>KimbleAgent__IsAddOn__c</columns>
    <columns>KimbleAgent__AnalysisPriority__c</columns>
    <columns>KimbleAgent__Allowed__c</columns>
    <columns>KimbleAgent__Available__c</columns>
    <columns>KimbleAgent__RequiresPackageLicense__c</columns>
    <columns>KimbleAgent__RequiresUserLicense__c</columns>
    <columns>KimbleAgent__CriterionGroupConditionLogic__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>